feat: arrumando logicas, implementando funcionalidades, regras de negocio, banco de dados web, interfaces, correção de bugs etc